--- a/bio.html
+++ b/bio.html
@@ -1,5 +1,7 @@
 <!doctype html>
+
 <html class="no-js" lang="">
+
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -15,5 +17,9 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
+
     <body>
+
+      <img class="background" src="images/bios/backgroundbio.jpg"/>
+
     </body>
