--- a/bio.html
+++ b/bio.html
@@ -19,7 +19,8 @@
     </head>
 
     <body>
+      <h1>bios</h1>
 
-      <img class="background" src="images/bios/backgroundbio.jpg"/>
+      <img class="background" src="images/bios/backgroundbio.png"/>
 
     </body>
