--- a/bio.html
+++ b/bio.html
@@ -18,7 +18,7 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
 
-    <body>
+    <body id="bios-page">
       <h1>bios</h1>
 
       <img class="background" src="images/bios/backgroundbio.png" width="100%" />
