--- a/bio.html
+++ b/bio.html
@@ -1,7 +1,5 @@
 <!doctype html>
-
 <html class="no-js" lang="">
-
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -17,52 +15,69 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
-
     <body id="bios-page">
-      <h1>bios</h1>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+        <div class="site-container">
 
-      <img class="background" src="images/bios/backgroundbio.png" width="100%" />
+          <h1>bios</h1>
 
-        <div class="content">
+          <img class="background" src="images/bios/backgroundbio.png" width="100%" />
 
-          <div class="Alison">
-            <a target="_blank" href="images/bios/alisonhazle.jpg">
-              <img src="images/bios/alison.png" alt="alison.png" width="200" />
-            </a>
-            <h3>Alison</h3>
-          </div>
+            <div class="content">
 
-          <div class="courtney">
-            <a target="_blank" href="images/bios/courtneyschultz.jpg">
-              <img src="images/bios/courtney.png" alt="courtney.png" width="200" />
-            </a>
-            <h3>Courtney</h3>
-          </div>
+              <div class="Alison">
+                <a target="_blank" href="images/bios/alisonhazle.jpg">
+                  <img src="images/bios/alison.png" alt="alison.png" width="200" />
+                </a>
+                <h3>Alison</h3>
+              </div>
 
-          <div class="deanna">
-            <a target="_blank" href="images/bios/deannamarino.jpg">
-              <img src="images/bios/deanna.png" alt="courtney.png" width="200" />
-            </a>
-            <h3>Deanna</h3>
-          </div>
+              <div class="courtney">
+                <a target="_blank" href="images/bios/courtneyschultz.jpg">
+                  <img src="images/bios/courtney.png" alt="courtney.png" width="200" />
+                </a>
+                <h3>Courtney</h3>
+              </div>
 
-          <div class="nikki">
-            <a target="_blank" href="images/bios/nikkiishak.jpg">
-              <img src="images/bios/nikki.png" alt="nikki.png" width="200" />
-            </a>
-            <h3>Nikki</h3>
-          </div>
+              <div class="deanna">
+                <a target="_blank" href="images/bios/deannamarino.jpg">
+                  <img src="images/bios/deanna.png" alt="courtney.png" width="200" />
+                </a>
+                <h3>Deanna</h3>
+              </div>
 
-          <div class="phoebe">
-            <a target="_blank" href="images/bios/phoebemonroe.jpg">
-              <img src="images/bios/phoebe.png" alt="phoebe.png" width="200" />
-            </a>
-            <h3>Phoebe</h3>
-          </div>
+              <div class="nikki">
+                <a target="_blank" href="images/bios/nikkiishak.jpg">
+                  <img src="images/bios/nikki.png" alt="nikki.png" width="200" />
+                </a>
+                <h3>Nikki</h3>
+              </div>
 
+              <div class="phoebe">
+                <a target="_blank" href="images/bios/phoebemonroe.jpg">
+                  <img src="images/bios/phoebe.png" alt="phoebe.png" width="200" />
+                </a>
+                <h3>Phoebe</h3>
+              </div>
 
+            </div>
 
-        </div>
+        </div><!-- End .site-container -->
+        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
 
-
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script> -->
     </body>
+</html>
